--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "react-scaffold",
+  "name": "account-transaction",
   "version": "1.0.0",
   "author": "pleaobraga",
   "license": "ISC",
-  "description": "React boilerplate",
+  "description": "React App to manage transactions",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --config ./config/webpack.dev.js",
     "build": "webpack --config ./config/webpack.prod.js",
     "test": "jest --config jest.config.json --no-cache --verbose",
-    "test:watch": "yarn test --  --watchAll",
+    "test:watch": "yarn test -- --watchAll",
     "test:update": "yarn test -- -u",
     "test:coverage": "yarn test -- --coverage --colors",
-    "lint": "esw . --ext .js,.jsx  --color ",
+    "lint": "esw . --ext .js,.jsx --color ",
     "lint:watch": "yarn lint -- --watch",
     "storybook": "start-storybook -p 9000 -c .storybook -s ./public "
   },
