--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
+    "formik": "^2.2.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -76,6 +77,8 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
   }
 }
