--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "description": "React App to manage transactions",
   "main": "index.js",
+  "homepage": "https://pleaobraga.github.io/account-transactions/",
   "scripts": {
     "start": "webpack-dev-server --open --config ./config/webpack.dev.js",
     "build": "webpack --config ./config/webpack.prod.js",
@@ -14,7 +15,9 @@
     "test:coverage": "yarn test -- --coverage --colors",
     "lint": "esw . --ext .js,.jsx --color ",
     "lint:watch": "yarn lint -- --watch",
-    "storybook": "start-storybook -p 9000 -c .storybook -s ./public "
+    "storybook": "start-storybook -p 9000 -c .storybook -s ./public ",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "husky": {
     "hooks": {
@@ -70,6 +73,7 @@
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "formik": "^2.2.1",
+    "gh-pages": "^3.1.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
