--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "browserslist": [
     "last 4 version"
   ],
+  "engines": {
+    "node": ">=12.0.0",
+    "npm": ">=6.0.0"
+  },
   "devDependencies": {
     "@storybook/addon-actions": "^5.1.3",
     "@storybook/addon-info": "^5.1.3",
